--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <td>asdfsfsd</td>
         </tr>
     </table>
-    <img src="./mysterybox.jpg" alt="smurf">
-    <img src="./dog.png" alt="dog">
+    <img src="./images/mysterybox.jpg" alt="smurf" width="255">
+    <img src="./images/dog.png" alt="dog">
     
 </body>
 </html>
